cluster/apps/captain-core/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: captain-core-bot
  namespace: captain-core
  labels:
    app.kubernetes.io/part-of: captain-core
spec:
  replicas: 1
  selector:
    matchLabels:
      app: captain-core-bot
  template:
    metadata:
      labels:
        app: captain-core-bot
    spec:
      imagePullSecrets:
        - name: ghcr-credentials
      containers:
        - name: bot
          image: ghcr.io/arsenikki/captain-core:v0.12.0
          imagePullPolicy: IfNotPresent
          command: [".venv/bin/python", "bot.py"]
          ports:
            - containerPort: 8000
              name: http
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1Gi
          volumeMounts:
            - name: dshm
              mountPath: /dev/shm
      volumes:
        - name: dshm
          emptyDir:
            medium: Memory
            sizeLimit: 512Mi
