cluster/apps/captain-core/service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: captain-core-app
  namespace: captain-core
spec:
  type: ClusterIP
  selector:
    app: captain-core-bot
  ports:
    - name: http
      port: 8000
      targetPort: 8000
